# galaktec-digital-cpu

./: .gitignore  Cargo.toml  README.md
galaktec-digital-cpu-core/: Cargo.toml
galaktec-digital-cpu-core/src/: clock.rs  device.rs  discrete.rs  interconnect.rs  latency.rs  lib.rs  peripheral.rs  signal.rs
galaktec-digital-cpu-core/src/peripheral/: address_map.rs
galaktec-digital-cpu-core/src/riscv/: register_file.rs
galaktec-digital-cpu-core/tests/: integration_test.rs  interconnect_test.rs
galaktec-digital-cpu-discrete/: Cargo.toml
galaktec-digital-cpu-discrete/src/: clock.rs  device.rs  lib.rs
galaktec-digital-cpu-discrete/tests/: integration_test.rs
galaktec-digital-cpu-peripheral/: Cargo.toml
galaktec-digital-cpu-peripheral/src/: address_map.rs  bus.rs  lib.rs  memory.rs
galaktec-digital-cpu-peripherals/: Cargo.toml
galaktec-digital-cpu-peripherals/src/: lib.rs  memory.rs
galaktec-digital-cpu-riscv/: Cargo.toml  LICENSE_MIT
src/: bus.rs  clock.rs  cpu.rs  lib.rs  memory.rs  peripheral.rs  riscv.rs
src/bus/: interface.rs  peripheral.rs
src/peripheral/: address_map.rs  bus.rs  interface.rs  memory.rs  mod.rs
src/peripheral/bus/: clock_interface.rs  mod.rs  peripheral_interface.rs
src/peripheral/data_bus/: mod.rs
src/riscv/: mod.rs  register_file.rs
