[package]
name = "galaktec-digital-cpu-peripherals"
version = "0.1.0"
authors = ["Matthew Philyaw <matthew.philyaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galaktec-digital-cpu-core = { path = "../galaktec-digital-cpu-core" }